--- a/frontend/views/applicationsTop.ejs
+++ b/frontend/views/applicationsTop.ejs
@@ -9,7 +9,7 @@
 
 <body>
     <%- include('navbar')%>
-        <h1 class="page_title">APPLICATIONS</h1>
+        <h1 class="page_title">TOP SELLING APPLICATIONS</h1>
         <div id="content">
             <div class="itemsRow">
                 <% for (var i=0;i<applications.length;i++) {%>
