--- a/frontend/views/booksTop.ejs
+++ b/frontend/views/booksTop.ejs
@@ -9,7 +9,7 @@
 
 <body>
     <%- include('navbar')%>
-        <h1 class="page_title">BOOKS</h1>
+        <h1 class="page_title">TOP SELLING BOOKS</h1>
 
         <div id="content">
             <div class="itemsRow">
