--- a/frontend/views/gamesTop.ejs
+++ b/frontend/views/gamesTop.ejs
@@ -9,7 +9,7 @@
 
 <body>
     <%- include('navbar')%>
-        <h1 class="page_title">GAMES</h1>
+        <h1 class="page_title">TOP SELLING GAMES</h1>
 
         <div id="content">
             <div class="itemsRow">
