--- a/frontend/views/lastVisited.ejs
+++ b/frontend/views/lastVisited.ejs
@@ -26,6 +26,7 @@
                 </a>
             </div>
         </div>
+        <h1 class="page_title">LAST VISITED ITEMS</h1>
 
         <div id="content">
             <div class="itemsRow">
