--- a/frontend/views/wishlist.ejs
+++ b/frontend/views/wishlist.ejs
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+
     <%- include('navbar')%>
         <div class="dropdown">
             <button class="dropbtn">Category</button>
@@ -26,6 +27,9 @@
                 </a>
             </div>
         </div>
+
+        <h1 class="page_title">WISHLIST</h1>
+
         <div id="content">
             <div class="itemsRow">
                 <% for (var i=0;i<wishlist.length;i++) {%>
