[Fix] $ sign [Add] Data

--- a/frontend/views/applications.ejs
+++ b/frontend/views/applications.ejs
@@ -40,7 +40,7 @@
                                                 <% if (applicationsTopSelling[i].price===0) { %>
                                                     Free
                                                     <% } else { %>
-                                                        <%=applicationsTopSelling[i].price%>$
+                                                        $<%=applicationsTopSelling[i].price%>
                                                             <% } %>
                                             </p>
                     </div>
@@ -76,7 +76,7 @@
                                                 <% if (applicationsNewest[i].price===0) { %>
                                                     Free
                                                     <% } else { %>
-                                                        <%=applicationsNewest[i].price%>$
+                                                        $<%=applicationsNewest[i].price%>
                                                             <% } %>
                                             </p>
                     </div>
