--- a/frontend/views/applicationsTop.ejs
+++ b/frontend/views/applicationsTop.ejs
@@ -65,7 +65,7 @@
                                                 <% if (applications[i].price===0) { %>
                                                     Free
                                                     <% } else { %>
-                                                        <%=applications[i].price%>$
+                                                        $<%=applications[i].price%>
                                                             <% } %>
                                             </p>
                     </div>
