--- a/frontend/views/books.ejs
+++ b/frontend/views/books.ejs
@@ -39,7 +39,7 @@
                                                 <% if (booksTopSelling[i].price===0) { %>
                                                     Free
                                                     <% } else { %>
-                                                        <%=booksTopSelling[i].price%>$
+                                                        $<%=booksTopSelling[i].price%>
                                                             <% } %>
                                             </p>
                     </div>
@@ -75,7 +75,7 @@
                                                 <% if (booksNewest[i].price===0) { %>
                                                     Free
                                                     <% } else { %>
-                                                        <%=booksNewest[i].price%>$
+                                                        $<%=booksNewest[i].price%>
                                                             <% } %>
                                             </p>
                     </div>
