--- a/frontend/views/booksTop.ejs
+++ b/frontend/views/booksTop.ejs
@@ -65,7 +65,7 @@
                                                 <% if (books[i].price===0) { %>
                                                     Free
                                                     <% } else { %>
-                                                        <%=books[i].price%>$
+                                                        $<%=books[i].price%>
                                                             <% } %>
                                             </p>
                     </div>
