--- a/frontend/views/games.ejs
+++ b/frontend/views/games.ejs
@@ -39,7 +39,7 @@
                                                 <% if (gamesTopSelling[i].price===0) { %>
                                                     Free
                                                     <% } else { %>
-                                                        <%=gamesTopSelling[i].price%>$
+                                                        $<%=gamesTopSelling[i].price%>
                                                             <% } %>
                                             </p>
                     </div>
@@ -76,7 +76,7 @@
                                                 <% if (gamesNewest[i].price===0) { %>
                                                     Free
                                                     <% } else { %>
-                                                        <%=gamesNewest[i].price%>$
+                                                        $<%=gamesNewest[i].price%>
                                                             <% } %>
                                             </p>
                     </div>
