--- a/frontend/views/gamesTop.ejs
+++ b/frontend/views/gamesTop.ejs
@@ -65,7 +65,7 @@
                                                 <% if (games[i].price===0) { %>
                                                     Free
                                                     <% } else { %>
-                                                        <%=games[i].price%>$
+                                                        $<%=games[i].price%>
                                                             <% } %>
                                             </p>
                     </div>
