--- a/frontend/views/home.ejs
+++ b/frontend/views/home.ejs
@@ -40,7 +40,7 @@
                                                 <% if (topSellingApplications[i].price===0) { %>
                                                     Free
                                                     <% } else { %>
-                                                        <%=topSellingApplications[i].price%>$
+                                                        $<%=topSellingApplications[i].price%>
                                                             <% } %>
                                             </p>
                     </div>
@@ -83,7 +83,7 @@
                                                 <% if (topSellingMovies[i].price===0) { %>
                                                     Free
                                                     <% } else { %>
-                                                        <%=topSellingMovies[i].price%>$
+                                                        $<%=topSellingMovies[i].price%>
                                                             <% } %>
                                             </p>
                     </div>
@@ -120,7 +120,7 @@
                                                 <% if (newestGames[i].price===0) { %>
                                                     Free
                                                     <% } else { %>
-                                                        <%=newestGames[i].price%>$
+                                                        $<%=newestGames[i].price%>
                                                             <% } %>
                                             </p>
                     </div>
@@ -156,7 +156,7 @@
                                                 <% if (newestBooks[i].price===0) { %>
                                                     Free
                                                     <% } else { %>
-                                                        <%=newestBooks[i].price%>$
+                                                        $<%=newestBooks[i].price%>
                                                             <% } %>
                                             </p>
                     </div>
