--- a/frontend/views/lastVisited.ejs
+++ b/frontend/views/lastVisited.ejs
@@ -96,7 +96,7 @@
                                                         <% if (last24VisitedItems[i].price===0) { %>
                                                             Free
                                                             <% } else { %>
-                                                                <%=last24VisitedItems[i].price%>$
+                                                                $<%=last24VisitedItems[i].price%>
                                                                     <% } %>
                                                     </p>
                                 </div>
