--- a/frontend/views/movies.ejs
+++ b/frontend/views/movies.ejs
@@ -46,7 +46,7 @@
                                                 <% if (moviesTopSelling[i].price===0) { %>
                                                     Free
                                                     <% } else { %>
-                                                        <%=moviesTopSelling[i].price%>$
+                                                        $<%=moviesTopSelling[i].price%>
                                                             <% } %>
                                             </p>
                     </div>
@@ -91,7 +91,7 @@
                                                 <% if (moviesNewest[i].price===0) { %>
                                                     Free
                                                     <% } else { %>
-                                                        <%=moviesNewest[i].price%>$
+                                                        $<%=moviesNewest[i].price%>
                                                             <% } %>
                                             </p>
                     </div>
