--- a/frontend/views/moviesTop.ejs
+++ b/frontend/views/moviesTop.ejs
@@ -72,7 +72,7 @@
                                                 <% if (movies[i].price===0) { %>
                                                     Free
                                                     <% } else { %>
-                                                        <%=movies[i].price%>$
+                                                        $<%=movies[i].price%>
                                                             <% } %>
                                             </p>
                     </div>
