--- a/frontend/views/search.ejs
+++ b/frontend/views/search.ejs
@@ -98,7 +98,7 @@
                                                                     <% if (items[i][j].price===0) { %>
                                                                         Free
                                                                         <% } else { %>
-                                                                            <%=items[i][j].price%>$
+                                                                            $<%=items[i][j].price%>
                                                                                 <% } %>
                                                                 </p>
                                     </div>
