--- a/frontend/views/wishlist.ejs
+++ b/frontend/views/wishlist.ejs
@@ -99,7 +99,7 @@
                                                         <% if (wishlist[i].price===0) { %>
                                                             Free
                                                             <% } else { %>
-                                                                <%=wishlist[i].price%>$
+                                                                $<%=wishlist[i].price%>
                                                                     <% } %>
                                                     </p>
                                 </div>
