--- a/frontend/views/footer.ejs
+++ b/frontend/views/footer.ejs
@@ -5,7 +5,11 @@
     </div>
     <p><a href="#">About</a></p>
     <p><a href="#">Terms Of Service</a></p>
-    <img id="countryFlag" src="" alt="Flag">
-    <p id="country"></p>
-
+    <div class="rightFooter">
+        <img id="countryFlag" src="" alt="Flag" >
+        <p id="country" ></p>
+    </div>
+    <form action="" class="subscribe">
+        <input type="checkbox" id="subscribe" value="subsctibed">
+        <label for="subsctibe"> Subscribe </label><br>
 </footer>
