--- a/frontend/views/lastVisited.ejs
+++ b/frontend/views/lastVisited.ejs
@@ -88,9 +88,9 @@
                                             <%=last24VisitedItems[i].dateOfRelease%>
                                         </p>
                                         <% if (wishlist.includes(last24VisitedItems[i].id)) { %>
-                                            <a href="#"><i class="fa fa-bookmark bookmark"></i></a>
+                                            <a href="#!"><i class="fa fa-bookmark bookmark"></i></a>
                                             <% } else { %>
-                                                <a href="#"><i class="fa fa-bookmark-o bookmark"></i></a>
+                                                <a href="#!"><i class="fa fa-bookmark-o bookmark"></i></a>
                                                 <% } %>
                                                     <p class="itemPrice">
                                                         <% if (last24VisitedItems[i].price===0) { %>
