--- a/frontend/views/wishlist.ejs
+++ b/frontend/views/wishlist.ejs
@@ -90,9 +90,9 @@
                                         </p>
 
                                         <% if (wishlist.includes(wishlist[i])) { %>
-                                            <a href="#"><i class="fa fa-bookmark bookmark"></i></a>
+                                            <a href="#!"><i class="fa fa-bookmark bookmark"></i></a>
                                             <% } else { %>
-                                                <a href="#"><i class="fa fa-bookmark-o bookmark"></i></a>
+                                                <a href="#!"><i class="fa fa-bookmark-o bookmark"></i></a>
                                                 <% } %>
 
                                                     <p class="itemPrice">
