--- a/frontend/views/moviesTop.ejs
+++ b/frontend/views/moviesTop.ejs
@@ -63,9 +63,9 @@
                         </p>
                         <% if (username) { %>
                             <% if (wishlist.includes(movies[i]._id)) { %>
-                                <a href="#"><i class="fa fa-bookmark bookmark"></i></a>
+                                <a href="#!"><i class="fa fa-bookmark bookmark"></i></a>
                                 <% } else { %>
-                                    <a href="#"><i class="fa fa-bookmark-o bookmark"></i></a>
+                                    <a href="#!"><i class="fa fa-bookmark-o bookmark"></i></a>
                                     <% } %>
                                         <% } %>
                                             <p class="itemPrice">
