--- a/frontend/views/search.ejs
+++ b/frontend/views/search.ejs
@@ -89,9 +89,9 @@
                                             </p>
                                             <% if (username) { %>
                                                 <% if (wishlist.includes(items[i][j]._id)) { %>
-                                                    <a href=""><i class="fa fa-bookmark bookmark"></i></a>
+                                                    <a href="#!"><i class="fa fa-bookmark bookmark"></i></a>
                                                     <% } else { %>
-                                                        <a href=""><i class="fa fa-bookmark-o bookmark"></i></a>
+                                                        <a href="#!"><i class="fa fa-bookmark-o bookmark"></i></a>
                                                         <% } %>
                                                             <% } %>
                                                                 <p class="itemPrice">
