--- a/frontend/views/moviesTop.ejs
+++ b/frontend/views/moviesTop.ejs
@@ -27,6 +27,23 @@
             </a>
         </div>
     </div>
+    <div class="dropdown">
+        <button class="dropbtn">Filter By Genre</button>
+        <div id="filterDiv" class="dropdown-content">
+            <a href="#">
+                <img src="/../media/filter/genre.png" width="15" height="15"> Action and Adventure
+            </a>
+            <a href="#">
+                <img src="/../media/filter/topselling.png" width="15" height="15"> Animation
+            </a>
+            <a href="#">
+                <img src="/../media/filter/newreleases.png" width="15" height="15"> Comedy
+            </a>
+            <a href="#">
+                <img src="/../media/filter/gooddeals.png" width="15" height="15"> Drama
+            </a>
+        </div>
+    </div>
         <h1 class="page_title">MOVIES</h1>
 
         <div id="content">
